synaptic (0.75.1) UNRELEASED; urgency=low

  * po/ru.po:
    - updated, thanks to Alexander Sashanov (closes: Bug#614969)
  * gtk/rgrepositorywin.cc, gtk/gtkbuilder/window_repositories.ui:
    - fix repository editor (closes: #613436)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 25 Feb 2011 10:28:27 +0100

synaptic (0.75) unstable; urgency=low

  [ Michael Vogt ]
  * merged lp:~mathieu-tl/synaptic/gtk3 this brings gtkbuilder
    (instead of glade) and the preparation for updating for gtk3
    Many thanks to Mathieu Trudel-Lapierre
  * show changelog button alongside the screenshot button
  * make sure /etc/apt/apt.conf.d/99synaptic is mode 644
    (LP: #637157)
  * common/rpackagecache.cc:
    - read pindir as well as the pinfile (LP: #628818)
  * when reading markings, ensure the views are refreshed
    so that broken dependencies are displayed
  * show /ask about the pkg state changes when reading selections
    from a file, simpify askStateChanges code
  * merged
    lp:~chris-ascentsoftware/ubuntu/natty/synaptic/synaptic-fix-706271
    many thanks! (LP: #706271)
  * merged lp:~kelemeng/synaptic/bug702181, many thanks! 
    (LP: #702181)
  * merged lp:~kelemeng/synaptic/bug688897, many thanks! 
    (LP: #688897)

  [ Chris McGinlay ]
  * gtk/gtkbuilder/window_preferences.ui, po/*
   - Change capitalisation of internet to Internet (LP: #706271)

  [ Luca Falavigna ]
  * common/rpackageview.cc:
    - Do not display base packages in manual view.
  
 -- Michael Vogt <mvo@debian.org>  Thu, 10 Feb 2011 09:56:20 +0100

synaptic (0.75~pre4) natty; urgency=low

  * debian/control:
    - recommend libgtk2-perl instead of libgnome2-perl to get
      the latest debconf gtk goodness (thanks to Colin Watson)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 17 Dec 2010 15:05:09 +0100

synaptic (0.75~pre3) natty; urgency=low

  [ Gabor Kelemen ]
  * Add gettext type to .ui files
  * Change .glade files to .ui files, stop intltool from complaining