@@ -24,7 +24,8 @@
                         <property name="label" translatable="yes">_Read Markings...</property>
                         <property name="visible">True</property>
                         <property name="use_underline">True</property>
-                        <property name="use_stock">True</property>
+                        <property name="image">image1</property>
+                        <property name="use_stock">False</property>
                         <signal name="activate" handler="on_open_activate"/>
                       </object>
                     </child>
@@ -33,7 +34,8 @@
                         <property name="label" translatable="yes">_Save Markings</property>
                         <property name="visible">True</property>
                         <property name="use_underline">True</property>
-                        <property name="use_stock">True</property>
+                        <property name="image">image2</property>
+                        <property name="use_stock">False</property>
                         <signal name="activate" handler="on_save_activate"/>
                       </object>
                     </child>
@@ -42,7 +44,8 @@
                         <property name="label" translatable="yes">Save Markings _As...</property>
                         <property name="visible">True</property>
                         <property name="use_underline">True</property>
-                        <property name="use_stock">True</property>
+                        <property name="image">image3</property>
+                        <property name="use_stock">False</property>
                         <signal name="activate" handler="on_save_as_activate"/>
                       </object>
                     </child>
@@ -63,7 +66,7 @@
                     <child>
                       <object class="GtkMenuItem" id="menu_add_downloadedfiles">
                         <property name="visible">True</property>
-                        <property name="tooltip_text" translatable="yes">Add packages downloaded with the &quot;Generate package download script&quot; feature to the system</property>
+                        <property name="tooltip_text" translatable="yes">Add packages downloaded with the "Generate package download script" feature to the system</property>
                         <property name="label" translatable="yes">Add downloaded packages</property>
                         <property name="use_underline">True</property>
                         <signal name="activate" handler="on_add_downloadedfiles_activate"/>
@@ -92,7 +95,8 @@
                         <property name="label" translatable="yes">_Quit</property>
                         <property name="visible">True</property>
                         <property name="use_underline">True</property>
-                        <property name="use_stock">True</property>
+                        <property name="image">image4</property>
+                        <property name="use_stock">False</property>
                         <accelerator key="Q" signal="activate" modifiers="GDK_CONTROL_MASK"/>
                         <signal name="activate" handler="on_exit_activate"/>
                       </object>
@@ -110,7 +114,7 @@
                   <object class="GtkMenu" id="actions1_menu">
                     <child>
                       <object class="GtkImageMenuItem" id="undo1">
-                        <property name="label" translatable="yes">_Undo</property>
+                        <property name="label">gtk-undo</property>
                         <property name="visible">True</property>
                         <property name="use_underline">True</property>
                         <property name="use_stock">True</property>
@@ -120,7 +124,7 @@
                     </child>
                     <child>
                       <object class="GtkImageMenuItem" id="redo1">
-                        <property name="label" translatable="yes">_Redo</property>
+                        <property name="label">gtk-redo</property>
                         <property name="visible">True</property>
                         <property name="use_underline">True</property>
                         <property name="use_stock">True</property>
@@ -146,7 +150,8 @@
                         <property name="label" translatable="yes">_Search...</property>
                         <property name="visible">True</property>
                         <property name="use_underline">True</property>
-                        <property name="use_stock">True</property>
+                        <property name="image">image5</property>
+                        <property name="use_stock">False</property>
                         <accelerator key="F" signal="activate" modifiers="GDK_CONTROL_MASK"/>
                         <signal name="activate" handler="on_search_name"/>
                       </object>
@@ -161,7 +166,8 @@
                         <property name="label" translatable="yes">_Reload Package Information</property>
                         <property name="visible">True</property>
                         <property name="use_underline">True</property>
-                        <property name="use_stock">True</property>
+                        <property name="image">image6</property>
+                        <property name="use_stock">False</property>
                         <accelerator key="R" signal="activate" modifiers="GDK_CONTROL_MASK"/>
                         <signal name="activate" handler="on_update_packages"/>
                       </object>
@@ -171,7 +177,8 @@
                         <property name="label" translatable="yes">_Add CD-ROM...</property>
                         <property name="visible">True</property>
                         <property name="use_underline">True</property>
-                        <property name="use_stock">True</property>
+                        <property name="image">image7</property>
+                        <property name="use_stock">False</property>
                         <signal name="activate" handler="on_add_cdrom_activate"/>
                       </object>
                     </child>
@@ -185,7 +192,8 @@
                         <property name="label" translatable="yes">_Mark All Upgrades...</property>
                         <property name="visible">True</property>
                         <property name="use_underline">True</property>
-                        <property name="use_stock">True</property>
+                        <property name="image">image8</property>
+                        <property name="use_stock">False</property>
                         <accelerator key="G" signal="activate" modifiers="GDK_CONTROL_MASK"/>
                         <signal name="activate" handler="on_upgrade_packages"/>
                       </object>
@@ -216,7 +224,8 @@
                         <property name="label" translatable="yes">A_pply Marked Changes</property>
                         <property name="visible">True</property>
                         <property name="use_underline">True</property>
-                        <property name="use_stock">True</property>
+                        <property name="image">image9</property>
+                        <property name="use_stock">False</property>
                         <accelerator key="P" signal="activate" modifiers="GDK_CONTROL_MASK"/>
                         <signal name="activate" handler="on_proceed_clicked"/>
                       </object>
@@ -237,7 +246,8 @@
                         <property name="label" translatable="yes">U_nmark</property>
                         <property name="visible">True</property>
                         <property name="use_underline">True</property>
-                        <property name="use_stock">True</property>
+                        <property name="image">image10</property>
+                        <property name="use_stock">False</property>
                         <accelerator key="N" signal="activate" modifiers="GDK_CONTROL_MASK"/>
                         <signal name="activate" handler="on_menu_action_keep"/>
                       </object>
@@ -247,7 +257,8 @@
                         <property name="label" translatable="yes">Mark for _Installation</property>
                         <property name="visible">True</property>
                         <property name="use_underline">True</property>
-                        <property name="use_stock">True</property>
+                        <property name="image">image11</property>
+                        <property name="use_stock">False</property>
                         <accelerator key="I" signal="activate" modifiers="GDK_CONTROL_MASK"/>
                         <signal name="activate" handler="on_menu_action_install"/>
                       </object>
@@ -257,7 +268,8 @@
                         <property name="label" translatable="yes">Mark for R_einstallation</property>
                         <property name="visible">True</property>
                         <property name="use_underline">True</property>
-                        <property name="use_stock">True</property>
+                        <property name="image">image12</property>
+                        <property name="use_stock">False</property>
                         <signal name="activate" handler="on_menu_action_reinstall"/>
                       </object>
                     </child>
@@ -266,7 +278,8 @@
                         <property name="label" translatable="yes">Mark for _Upgrade</property>
                         <property name="visible">True</property>
                         <property name="use_underline">True</property>
-                        <property name="use_stock">True</property>
+                        <property name="image">image13</property>
+                        <property name="use_stock">False</property>
                         <accelerator key="U" signal="activate" modifiers="GDK_CONTROL_MASK"/>
                         <signal name="activate" handler="on_menu_action_install"/>
                       </object>
@@ -276,7 +289,8 @@
                         <property name="label" translatable="yes">Mark for _Removal</property>
                         <property name="visible">True</property>
                         <property name="use_underline">True</property>
-                        <property name="use_stock">True</property>
+                        <property name="image">image14</property>
+                        <property name="use_stock">False</property>
                         <accelerator key="Delete" signal="activate"/>
                         <signal name="activate" handler="on_menu_action_delete"/>
                       </object>
@@ -286,7 +300,8 @@
                         <property name="label" translatable="yes">Mark for Co_mplete Removal</property>
                         <property name="visible">True</property>
                         <property name="use_underline">True</property>
-                        <property name="use_stock">True</property>
+                        <property name="image">image15</property>
+                        <property name="use_stock">False</property>
                         <accelerator key="Delete" signal="activate" modifiers="GDK_SHIFT_MASK"/>
                         <signal name="activate" handler="on_menu_action_purge"/>
                       </object>
@@ -359,7 +374,8 @@
                         <property name="label" translatable="yes">_Properties</property>
                         <property name="visible">True</property>
                         <property name="use_underline">True</property>
-                        <property name="use_stock">True</property>
+                        <property name="image">image16</property>
+                        <property name="use_stock">False</property>
                         <accelerator key="O" signal="activate" modifiers="GDK_CONTROL_MASK"/>
                         <signal name="activate" handler="on_button_details_clicked"/>
                       </object>
@@ -397,7 +413,8 @@
                         <property name="label" translatable="yes">_Filters</property>
                         <property name="visible">True</property>
                         <property name="use_underline">True</property>
-                        <property name="use_stock">True</property>
+                        <property name="image">image17</property>
+                        <property name="use_stock">False</property>
                         <signal name="activate" handler="on_edit_filter_activate"/>
                       </object>
                     </child>
@@ -489,7 +506,7 @@
                   <object class="GtkMenu" id="help1_menu">
                     <child>
                       <object class="GtkImageMenuItem" id="menu_help">
-                        <property name="label" translatable="yes">_Contents</property>
+                        <property name="label">_Contents</property>
                         <property name="visible">True</property>
                         <property name="use_underline">True</property>
                         <property name="use_stock">True</property>
@@ -515,7 +532,7 @@
                     </child>
                     <child>
                       <object class="GtkImageMenuItem" id="menu_about">
-                        <property name="label" translatable="yes">_About</property>
+                        <property name="label">gtk-about</property>
                         <property name="visible">True</property>
                         <property name="use_underline">True</property>
                         <property name="use_stock">True</property>
@@ -617,18 +634,9 @@
                     </child>
                   </object>
                   <packing>
+                    <property name="expand">False</property>
+                    <property name="fill">False</property>
                     <property name="position">0</property>
-                  </packing>
-                </child>
-                <child>
-                  <object class="GtkAlignment" id="alignment1">
-                    <property name="visible">True</property>
-                    <child>
-                      <placeholder/>
-                    </child>
-                  </object>
-                  <packing>
-                    <property name="position">3</property>
                   </packing>
                 </child>
                 <child>
@@ -663,8 +671,7 @@
                   <packing>
                     <property name="expand">False</property>
                     <property name="fill">False</property>
-                    <property name="pack_type">end</property>
-                    <property name="position">2</property>
+                    <property name="position">1</property>
                   </packing>
                 </child>
                 <child>
@@ -697,8 +704,18 @@
                   <packing>
                     <property name="expand">False</property>
                     <property name="fill">False</property>
-                    <property name="pack_type">end</property>
-                    <property name="position">1</property>
+                    <property name="position">2</property>
+                  </packing>
+                </child>
+                <child>
+                  <object class="GtkAlignment" id="alignment1">
+                    <property name="visible">True</property>
+                    <child>
+                      <placeholder/>
+                    </child>
+                  </object>
+                  <packing>
+                    <property name="position">3</property>
                   </packing>
                 </child>
               </object>
@@ -1427,14 +1444,13 @@
                         <property name="visible">True</property>
                         <property name="border_width">12</property>
                         <property name="spacing">6</property>
-                        <property name="homogeneous">False</property>
                         <child>
                           <object class="GtkComboBox" id="combobox_depends">
                             <property name="visible">True</property>
                           </object>
                           <packing>
-                            <property name="position">0</property>
                             <property name="expand">False</property>
+                            <property name="position">0</property>
                           </packing>
                         </child>
                         <child>
@@ -1838,5 +1854,74 @@
         </child>
       </object>
     </child>
+  </object>
+  <object class="GtkImage" id="image1">
+    <property name="visible">True</property>
+    <property name="stock">gtk-open</property>
+  </object>
+  <object class="GtkImage" id="image2">
+    <property name="visible">True</property>
+    <property name="stock">gtk-save</property>
+  </object>
+  <object class="GtkImage" id="image3">
+    <property name="visible">True</property>
+    <property name="stock">gtk-save-as</property>
+  </object>
+  <object class="GtkImage" id="image4">
+    <property name="visible">True</property>
+    <property name="yalign">0.47999998927116394</property>
+    <property name="stock">gtk-quit</property>
+  </object>
+  <object class="GtkImage" id="image5">
+    <property name="visible">True</property>
+    <property name="stock">gtk-find</property>
+  </object>
+  <object class="GtkImage" id="image6">
+    <property name="visible">True</property>
+    <property name="stock">gtk-refresh</property>
+  </object>
+  <object class="GtkImage" id="image7">
+    <property name="visible">True</property>
+    <property name="stock">gtk-add</property>
+  </object>
+  <object class="GtkImage" id="image8">
+    <property name="visible">True</property>
+    <property name="stock">gtk-goto-top</property>
+  </object>
+  <object class="GtkImage" id="image9">
+    <property name="visible">True</property>
+    <property name="stock">gtk-apply</property>
+  </object>
+  <object class="GtkImage" id="image10">
+    <property name="visible">True</property>
+    <property name="stock">gtk-missing-image</property>
+  </object>
+  <object class="GtkImage" id="image11">
+    <property name="visible">True</property>
+    <property name="stock">gtk-missing-image</property>
+  </object>
+  <object class="GtkImage" id="image12">
+    <property name="visible">True</property>
+    <property name="stock">gtk-missing-image</property>
+  </object>
+  <object class="GtkImage" id="image13">
+    <property name="visible">True</property>
+    <property name="stock">gtk-missing-image</property>
+  </object>
+  <object class="GtkImage" id="image14">
+    <property name="visible">True</property>
+    <property name="stock">gtk-missing-image</property>
+  </object>
+  <object class="GtkImage" id="image15">
+    <property name="visible">True</property>
+    <property name="stock">gtk-missing-image</property>
+  </object>
+  <object class="GtkImage" id="image16">
+    <property name="visible">True</property>
+    <property name="stock">gtk-properties</property>
+  </object>
+  <object class="GtkImage" id="image17">
+    <property name="visible">True</property>
+    <property name="stock">gtk-edit</property>
   </object>
 </interface>
