@@ -4,6 +4,8 @@ synaptic (0.75.1) UNRELEASED; urgency=low
     - updated, thanks to Alexander Sashanov (closes: Bug#614969)
   * gtk/rgrepositorywin.cc, gtk/gtkbuilder/window_repositories.ui:
     - fix repository editor (closes: #613436)
+  * gtk/gtkbuilder/window_main.ui:
+    - fixup glade->gtkbuild menu messup
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 25 Feb 2011 10:28:27 +0100
 
